This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.3.0
=============
- Modify flag_add_rank into flagAddSampleRank
- change 'flag_add_coordinates' into 'flagAddCoordinates' in DbGrid::createSubGrid() and DbGrid::reset()
- Increase the size of the Enums from 32 to 40.
- Model::evalDriftMat() is replaced by Model::evalDriftMatrix()
- Model::covMatrixMS() is replaced by evalCovMatrixSymmetric()
- Model::covMatrixM() is replaced by evalCovMatrix()
- Model::covMatrixV() is replaced by evalCovMatrixV() (option added)
- Db::getActiveSampleNumber() (deprecated) is replaced by getSampleNumber(true)
- Use Eigen library for content storage of all dense matrices

Release 1.2.3
=============
- Fix windows python package

Release 1.2.2
=============
- R 4.4.0 support

Release 1.2.1
=============
- Fix artifact upload/download for github action

Release 1.2.0
=============
- Correct the functions evalCovMat() and evalDriftMat()
- Adding calculation of log-likelihood evaluation in the general case (class Model)
- Adding calculation of Log-Likelihood in SPDE
- Adding calculation of variance of estimation error in SPDE
- Updating internal procedures compare_test and update_test to allow personal reference files
  (for any type of non-regression file)
- Correcting the multivariate heterotopic conditional simulations
- Improvements in the different Gibbs sampler versions + new tutorial
- Function matrix_qoci() becomes MatrixSquareSymmetric::minimizeWithConstraintsInPlace()
- Improvement of test_potential.cpp (include cross-validation)
- Adding a special version to my_throw (i.e. my_throw_impossible)
- Fix AMatrix::isSymmetric (usefull for macos-14)

Release 1.1.0
=============
- MacOS compatibility (Intel and Silicon architectures)
- New dependency: Eigen library for matrices (dense and sparse)
- Fix issue 88, 98, 102, 101, 119, 115, 111