@@ -71,7 +71,7 @@ GSTLEARN_EXPORT int csv_manage(const char *filename,
                                const CSVformat& csv,
                                int mode,
                                int nitem,
-                               bool flag_integer = 0,
+                               bool flagInteger = false,
                                bool verbose = false);
 GSTLEARN_EXPORT void csv_print_double(double value);
 
@@ -249,7 +249,7 @@ GSTLEARN_EXPORT int db_write_csv(Db *db,
                                  const CSVformat& csv,
                                  int flag_allcol = 1,
                                  int flag_coor = 1,
-                                 bool flag_integer = false);
+                                 bool flagInteger = false);
 GSTLEARN_EXPORT int db_proportion_estimate(Db *dbin,
                                            DbGrid *dbout,
                                            Model *model,
