@@ -4,6 +4,8 @@ This file contains the logs between consecutive releases
 
 Release 1.3.0
 =============
+- Modify 'flag_cell' into 'flagCell'
+- Modify 'flag_integer' into 'flagInteger'
 - Modify flag_add_rank into flagAddSampleRank
 - change 'flag_add_coordinates' into 'flagAddCoordinates' in DbGrid::createSubGrid() and DbGrid::reset()
 - Increase the size of the Enums from 32 to 40.
